--- a/balancecheck.html
+++ b/balancecheck.html
@@ -15,7 +15,7 @@
                     </form>
                 </div>
                 <div id="dao_account_result" style="display:none">
-                    <div class="row" ng-show="checkResult" style="padding-top:20px">
+                    <div class="row" style="padding-top:20px">
                         <div class="col-md-6">
                             Account Balance : <b style="font-size:19px" id="dao_account_balance"></b> ETH
                         </div>
