--- a/tokensale.html
+++ b/tokensale.html
@@ -158,12 +158,12 @@
             <!-- use the mist-browser -->
             <div ng-show="account.existing=='yes_mist'">
                <ol>
-                  <li>Download the most recent version of the <a href="{{mist_link}}" target="_blank">Ethereum Wallet</a>; this video can guide you through the installation process (INSERT LINK).</li>
+                  <li>Download the most recent version of the <a href="{{mist_link}}" target="_blank">Ethereum Wallet</a>;  and if you want help, <a href="https://youtu.be/Y3JfLgjqNU4" target="_blank">this video can guide you through the installation process.</a>    </li>
                   <li>Unzip the file where you want install the program.</li>
                   <li>Open the Ethereum-Wallet application file<br/>Follow the instructions to set up your new Ethereum Account <br/>It will likely take several hours to synchronize the blockchain.</li>
                   <li>Make a note of your Ethereum account address.</li>
                   <li ng-show="account.currencyType=='ETH'">
-                        Load ETH (ether) onto the account
+                        Back up your Ethereum Account and load ETH onto the account. <a href="https://www.youtube.com/watch?v=CZ8ZCtbxD0M" target="_blank">this video</a> can guide you through the that process.  
                   </li>
                   <li ng-show="account.currencyType=='ETH'">
                      Send the amount of ETH you want to use to purchase DAO tokens to the following DAO contract address:<br/>
