--- a/balancecheck.html
+++ b/balancecheck.html
@@ -7,7 +7,7 @@
                         <div class="col-md-8 ">
                             <h3 style="color:white; font-size:20px; padding-bottom:20px"><strong>Check your DAO Token Balance:&nbsp;</strong></h3>
                             <input type="text" value="" name="dao_account" required="" id="dao_account_adr" class="validate-required validate-email"
-                            placeholder="Enter the address of the account used to purchase DAO tokens" style="font-size:12px; min-width:250px; width:80%">
+                            placeholder="Enter the address of the Ethereum account used to create DAO tokens" style="font-size:12px; min-width:250px; width:80%">
                         </div>
                         <div class="col-md-4 text-right" style="height: 90px; line-height: 90px;">
                             <input type="submit" id="dao_account_btn"  style="max-width: 100%;color:white" value="Check" onclick="">
