--- a/tokencreation.html
+++ b/tokencreation.html
@@ -198,7 +198,7 @@
                   <li>Open the Ethereum-Wallet application file.</li>
                   <li>Follow the instructions to set up your new Ethereum Account. <br/>(It will likely take several hours to synchronize the blockchain).</li>
                   <li>Make a note of your Ethereum account address.</li>
-                  <li>Back up the Ethereum account you intend to use and load ETH onto the account (We recommend at least 0.1 ETH). <a href="https://www.youtube.com/watch?v=CZ8ZCtbxD0M" target="_blank">this video</a> can guide you through the that process.  
+                  <li>Back up the Ethereum account you intend to use and load ETH onto that account. <a href="https://www.youtube.com/watch?v=CZ8ZCtbxD0M" target="_blank">this video</a> can guide you through the that process.  
                   </li>
                   <li ng-show="account.currencyType=='ETH' && account.useExchange=='no'">
                      Send the amount of ETH you want to use to Create DAO tokens to the following DAO contract address:<br/>
