Some language usage fixes in Token Creation

--- a/tokencreation.html
+++ b/tokencreation.html
@@ -193,12 +193,12 @@
             <div ng-show="account.existing=='yes_mist'">
                <p>Installing and setting up the Ethereum Wallet:</p>
                <ol>
-                  <li>Download the a stable version of the <a href="{{mist_link}}" target="_blank">Ethereum Wallet</a>; and for extra assistence, <a href="https://youtu.be/Y3JfLgjqNU4" target="_blank">this video can guide you through the installation process.</a>    </li>
-                  <li>Unzip the file where you want install the program.</li>
+                  <li>Download a stable version of the <a href="{{mist_link}}" target="_blank">Ethereum Wallet</a>; and for extra assistence, <a href="https://youtu.be/Y3JfLgjqNU4" target="_blank">this video can guide you through the installation process.</a>    </li>
+                  <li>Unzip the file where you want to have program installed.</li>
                   <li>Open the Ethereum-Wallet application file.</li>
                   <li>Follow the instructions to set up your new Ethereum Account. <br/>(It will likely take several hours to synchronize the blockchain).</li>
                   <li>Make a note of your Ethereum account address.</li>
-                  <li>Back up the Ethereum account you intend to use and load ETH onto that account. <a href="https://www.youtube.com/watch?v=CZ8ZCtbxD0M" target="_blank">this video</a> can guide you through the that process.  
+                  <li>Back up the Ethereum account you intend to use and load ETH onto that account. <a href="https://www.youtube.com/watch?v=CZ8ZCtbxD0M" target="_blank">This video</a> can guide you through the that process.  
                   </li>
                   <li ng-show="account.currencyType=='ETH' && account.useExchange=='no'">
                      Send the amount of ETH you want to use to Create DAO tokens to the following DAO contract address:<br/>
@@ -219,7 +219,7 @@
                        I understand that if I use an exchange that does not have an option to include Data with my withdrawal there is a chance I will not receive DAO tokens and I could lose the ETH I withdrew.<br><br>
 
                         When withdrawing from an exchange directly to the DAO, you <b style="color:red">MUST</b> add data to the withdrawal, so the DAO can register your wallet. 
-                        If you don't, your tokens will be owned by the exchange and may lose both your ETH and your DAO tokens. Do not use an exchange that does not support sending data with your ETH withdrawal.
+                        If you don't, your tokens will be owned by the exchange and you may lose both your ETH and your DAO tokens. Do not use an exchange that does not support sending data with your ETH withdrawal.
                      </p>
                      <div>
                         <form name="wallet2">
