--- a/tokencreation.html
+++ b/tokencreation.html
@@ -39,25 +39,25 @@
 
             <form ng-cloak>
               <md-radio-group ng-model="account.currencyType" >
-                 <md-radio-button value="ETH">ETH (Recommended) 
-                    <!--  <md-tooltip md-direction="bottom" md-delay="0">
-                         Select to use ETH that you already own. You will securely hold the DAO tokens yourself.
-                    </md-tooltip> -->
+                 <md-radio-button value="ETH"><b>ETH</b> (Recommended)
+                  <div class="info"> 
+                     Select to use ETH that you already own. You will securely hold the DAO tokens yourself.
+                  </div>
                 </md-radio-button>
-                 <md-radio-button value="BTC">BTC (Uses Gatecoin) 
-                    <!--  <md-tooltip  md-direction="bottom" md-delay="0">
+                 <md-radio-button value="BTC"><b>BTC</b> (Uses Gatecoin) 
+                    <div  class="info">
                         Select to use BTC directly on this website. You will securely hold the DAO tokens yourself.
-                    </md-tooltip> -->
+                    </div>
                 </md-radio-button>
-                 <md-radio-button value="COINS">BTC or other digital currencies (Uses ShapeShift) 
-                    <!--  <md-tooltip md-direction="bottom" md-delay="0" >
+                 <md-radio-button value="COINS"><b>BTC or other digital currencies</b> (Uses ShapeShift) 
+                    <div  class="info">
                        Select to use any digital currencies supported by ShapeShift. You will securely hold the DAO tokens yourself.
-                    </md-tooltip> -->
+                    </div  class="info">
                 </md-radio-button>
-                 <md-radio-button value="FIAT">BTC, USD, EUR or CHF (Uses Bity, Bittrex or Gatecoin) 
-                    <!--  <md-tooltip md-direction="bottom" md-delay="0">
+                 <md-radio-button value="FIAT"><b>BTC, USD, EUR or CHF</b> (Uses Bity, Bittrex or Gatecoin)
+                 <div>
                         Select to use national currencies, or if you would prefer to hold your DAO tokens on an exchange website.
-                    </md-tooltip> -->
+                 </div>
                 </md-radio-button>
               </md-radio-group>
            </form>
@@ -80,6 +80,7 @@
                <md-radio-button value="yes">I already have an Ethereum wallet, and I know how to use it </md-radio-button>
                <md-radio-button value="yes_mist">I would like instructions on how to install the Ethereum Wallet.</md-radio-button>
                <md-radio-button value="no" ng-disabled="!canGenerateAccount">I want to create a new Ethereum account here in the browser, to import later in any wallet.
+                  
                   <div ng-show="!canGenerateAccount">You are using a browser, which is not safe to generate your Account here, so either switch to Firefox or Chrome or simply install the Ethereum Wallet!</div>   
                </md-radio-button>
                <md-radio-button value="exchange" ng-show="account.currencyType=='FIAT'">I will create my Ethereum account later so I can vote and control my DAO tokens' the private keys, for now I would like to store them on an exchange.</md-radio-button>
