--- a/tokencreation.html
+++ b/tokencreation.html
@@ -55,7 +55,7 @@
                     </div  class="info">
                 </md-radio-button>
                  <md-radio-button value="FIAT"><b>BTC, USD, EUR or CHF</b> (Uses Bity, Bittrex or Gatecoin)
-                 <div>
+                 <div  class="info">
                         Select to use national currencies, or if you would prefer to hold your DAO tokens on an exchange website.
                  </div>
                 </md-radio-button>
