--- a/tokencreation.html
+++ b/tokencreation.html
@@ -439,7 +439,7 @@
               </p>
               <p>
                  <ol>
-                    <li><a href="https://gatecoin.com/" target="_new">Bittrex (Global support, including New York residents)</a><br/>
+                    <li><a href="https://bittrex.com/Account/Register" target="_new">Bittrex (Global support, including New York residents)</a><br/>
                         On Bittrex you will have to create a new account or sign in as a returning user before you will be able to Create DAO tokens. You will not own the tokens you Create using this method; they will be held directly on the exchange. In order to truly own DAO tokens and use them to vote or participate in the inner workings of The DAO in any way, you will have to install the <a href="{{mist_link}}" target="_blank">Ethereum Wallet</a> and withdraw your DAO tokens to your Ethereum Wallet account.
                       
                     </li>
