--- a/tokencreation.html
+++ b/tokencreation.html
@@ -100,7 +100,7 @@
             
             <div ng-show="account.existing=='yes_wallet'">
                <p>Setting up your Ethereum Wallet:</p>
-              <iframe id="myetherwallet" width="100%" height="800" src="https://www.myetherwallet.com/" style="border-style: none;"/>
+              <iframe id="myetherwallet" width="100%" height="800" src="https://www.myetherwallet.com/embedded.html" style="border-style: none;"/>
             </div>
          </form>
 
