--- a/tokencreation.html
+++ b/tokencreation.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div id="dao_include" style="font-size:14px">fvo
+    <div id="dao_include" style="font-size:14px">
         <div id="crowdsaleApp" ng-app="tokencreation" layout="column" style="text-align: left;" layout-padding ng-controller="TokenCreationController as cs">
             <div class="col-sm" style="text-align:center" ng-show="!acceptedTC">
                 <div id="msgOutput" />
@@ -207,7 +207,7 @@
                             <div ng-show="account.existing=='yes' || account.existing=='yes_wallet' ">
                                 <form name="wallet2">
                                     <md-input-container style="margin-left:0px">
-                                        <label>Your wallet addressa</label>
+                                        <label>The wallet address you want to create the Tokens for</label>
                                         <input md-maxlength="42" md-minlength="40" name="adr" ng-model="account.adr" ethaddress />
                                         <div ng-messages="wallet2.adr.$error" role="alert" multiple ng-show="wallet2.adr.$dirty || wallet2.$submitted">
                                             <div ng-message="ethaddress"> Please enter a valid Ethereum account address like 0x1234567890abcdef...</div>
@@ -220,7 +220,7 @@
                                 <br/> Send the amount of ETH you want to use to Create DAO tokens to the following DAO contract address: <br/><br/>
                                 <pre>{{daoAddress}}</pre> <br/> The data you need to add is: <br/>
                                 <pre>{{ getDataField() }}</pre>
-                                <p><span style="color:red; font-size: 14px;">Note that this page will not update and you will not be notified of the transfer. </span><br/> This is expected as you are sending ETH directly to the DAO contract via an exchange. <br/><br/> <a href="voting.html" target="_new">Voting</a> on proposals will become possible at the end of the Creation phase. <br/><br/> You can safely close this page after you have completed your transfer.<br>
+                                <p><span style="color:red; font-size: 14px;">Note that this page will not update and you will not be notified of the transfer. </span><br/> This is expected as you are sending ETH directly to the DAO contract via an exchange. <br/><br/>After the exchange has sent the ETH, you will be able to confirm your balance on the <a href="./creation.html" target="_new">Creation page</a>.<br/> <a href="voting.html" target="_new">Voting</a> on proposals will become possible at the end of the Creation phase. <br/><br/> You can safely close this page after you have completed your transfer.<br>
                                 </p>
                             </div>
                         </div>
