--- a/tokencreation.html
+++ b/tokencreation.html
@@ -93,7 +93,7 @@
                         </div>
                         <div ng-show="account.existing=='yes_wallet'">
                             <p>Setting up your Ethereum Wallet:</p>
-                            <iframe id="myetherwallet" width="100%" height="800" src="https://www.myetherwallet.com/embedded.html" style="border-style: none;" />
+                            <iframe id="myetherwallet" width="100%" height="855" scrolling="no" src="https://www.myetherwallet.com/embedded.html" style="border-style: none;" />
                         </div>
                     </form>
                 </md-content>
